2010-11-24  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added white space after ',' when enumerating valid parameters.
	* src/OptionHandlerImpl.cc

2010-11-23  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Cleaned up Possible Values in usage help.  More than 2 values are
	delimited by ", ".
	* src/NameMatchOptionHandler.h
	* src/OptionHandler.cc
	* src/OptionHandler.h
	* src/OptionHandlerFactory.cc
	* src/OptionHandlerImpl.cc
	* test/OptionHandlerTest.cc

2010-11-23  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Made --allow-overwrite, --allow-piece-length-change,
	--realtime-chunk-checksum and --bt-require-crypto take optional
	argument. Fixed usage doc for --metalink-enable-unique-protocol.
	* doc/aria2c.1.txt
	* src/OptionHandlerFactory.cc
	* src/usage_text.h

2010-11-23  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Made --continue, --daemon, --no-conf, --no-netrc and --show-files
	option take optional argument.
	* doc/aria2c.1.txt
	* src/OptionHandlerFactory.cc
	* src/usage_text.h

2010-11-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added BtSeederStateChoke::PeerEntry::swap(). Also added
	non-member swap for it, which is friend function for
	BtSeederStateChoke because PeerEntry is private.
	* src/BtSeederStateChoke.cc
	* src/BtSeederStateChoke.h

2010-11-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added BtLeecherStateChoke::PeerEntry::swap(). Also added
	non-member swap for it, which is friend function for
	BtLeecherStateChoke because PeerEntry is private.
	* src/BtLeecherStateChoke.cc
	* src/BtLeecherStateChoke.h

2010-11-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added CookieStorage::DomainEntry::swap(). Also added non-member
	swap for it.
	* src/CookieStorage.cc
	* src/CookieStorage.h

2010-11-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Made LogFactory::logger_ as SharedHandle<Logger> to make dtor of