@@ -137,18 +137,6 @@ public:
   }
 
   void addAuthenticator(const SharedHandle<Authenticator>& authenticator);
-
-  static const std::string A2_MACHINE;
-
-  static const std::string A2_DEFAULT;
-
-  static const std::string A2_LOGIN;
-
-  static const std::string A2_PASSWORD;
-
-  static const std::string A2_ACCOUNT;
-
-  static const std::string A2_MACDEF;
 };
 
 } // namespace aria2
